2018-08-30  Eric Carlson  <eric.carlson@apple.com>

        Mock video devices should only support discrete sizes
        https://bugs.webkit.org/show_bug.cgi?id=189000
        <rdar://problem/43766551>

        Reviewed by Youenn Fablet.

        * UIProcess/WebProcessPool.cpp:
        (WebKit::WebProcessPool::resetMockMediaDevices):
        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::resetMockMediaDevices):

2018-08-30  Olivia Barnett  <obarnett@apple.com>

        Web Share API compatible with AppleTV and WatchOS
        https://bugs.webkit.org/show_bug.cgi?id=189157

        Reviewed by Tim Horton.

        * Shared/WebPreferencesDefaultValues.h:
        * UIProcess/ios/WKContentViewInteraction.h:
        * UIProcess/ios/WKContentViewInteraction.mm:
        (-[WKContentView fileUploadPanelDidDismiss:]):
        * UIProcess/ios/forms/WKShareSheet.h:
        * UIProcess/ios/forms/WKShareSheet.mm:
        (-[WKShareSheet invokeShareSheetWithResolution:]):
        Added platform checks.

2018-08-30  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r235413 and r235444.
        https://bugs.webkit.org/show_bug.cgi?id=189163

        Causes crashes when running layout tests under GuardMalloc
        (Requested by ryanhaddad on #webkit).

        Reverted changesets:

        "NetworkLoad::didReceiveResponse should pass its completion
        handler to its client"
        https://bugs.webkit.org/show_bug.cgi?id=188701
        https://trac.webkit.org/changeset/235413

        "Remove assertion introduced in r235413"
        https://bugs.webkit.org/show_bug.cgi?id=188701
        https://trac.webkit.org/changeset/235444

2018-08-30  Basuke Suzuki  <Basuke.Suzuki@sony.com>

        [Curl][WebKit] Bugfix on redirect.
        https://bugs.webkit.org/show_bug.cgi?id=189056

        Reviewed by Alex Christensen.

        Forget to call updateFromDelegatePreservingOldProperties in continueWillSendRequest like other ports do.
